--- a/jvm-library/.editorconfig
+++ b/jvm-library/.editorconfig
@@ -11,6 +11,10 @@ insert_final_newline = true
 [*.md]
 max_line_length = 80
 
-[*.{kt,kts,groovy}]
+[*.{kt,kts}]
+indent_size = 4
+max_line_length = 100
+
+[*.groovy]
 indent_size = 4
 max_line_length = 100
