--- a/jvm-library/.travis.yml
+++ b/jvm-library/.travis.yml
@@ -4,7 +4,7 @@ jdk: openjdk8
 
 script:
   - ./gradlew check --info
-  - ./gradlew jacocoTestReport
+  - ./gradlew koverXmlReport
 
 after_success:
   - curl -Os "https://uploader.codecov.io/latest/linux/codecov"
