--- a/jvm-app/.editorconfig
+++ b/jvm-app/.editorconfig
@@ -11,10 +11,6 @@ insert_final_newline = true
 [*.md]
 max_line_length = 80
 
-[*.{kt,kts}]
-indent_size = 4
-max_line_length = 100
-
-[*.groovy]
+[*.{kts,groovy}]
 indent_size = 4
 max_line_length = 100
