--- a/jvm-app/gradle/libs.versions.toml
+++ b/jvm-app/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ pages = "com.hendraanggrian.pages:0.1"
 
 [libraries]
 # lint
-rulebook-codenarc = "com.hendraanggrian.rulebook:rulebook-checkstyle:0.3"
+rulebook-codenarc = "com.hendraanggrian.rulebook:rulebook-codenarc:0.4"
 # main
 groovy = { module = "org.codehaus.groovy:groovy-all", version.ref = "groovy" }
 # test
